--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Sofien Dhouib
 logo: id.jpg
-email: "sofiane.lastname@gmail.com"
+description: "sofiane.lastname@gmail.com"
