--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minimal-mistakes-jekyll
+theme: "minimal-mistakes-jekyll"
 minimal_mistakes_skin: "default"
 title: Sofien Dhouib
 logo: id.jpg
