Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: "jekyll-theme-minimal"
+theme: jekyll-theme-cayman
 title: Sofien Dhouib
 logo: id.jpg
 description: "sofiane.lastname@gmail.com"
