--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 title: Sofien Dhouib
 logo: id.jpg
 description: "sofiane.lastname@gmail.com"
