--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-theme: jekyll-theme-minimal
+#theme: jekyll-theme-minimal
+remote_theme: "mmistakes/minimal-mistakes@4.20.2"
 title: Sofien Dhouib
 logo: id.jpg
 description: "sofiane.lastname@gmail.com"
