--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,5 @@
 main:
-  - title: "Posts"
+  - title: "Main"
     url: /posts/
-  - title: "Categories"
+  - title: "CV"
     url: /categories/
-  - title: "Tags"
-    url: /tags/
-  - title: "About"
-    url: /about/
