--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Sofien Dhouib
-description: 3rd year PhD student
+description: Postdoctoral researcher
 logo: id.png
